--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,21 @@
 <link rel="stylesheet" href="https://s3.amazonaws.com/data.minnpost/projects/minnpost-styles/0.0.6-alpha/minnpost-styles.min.css" type="text/css">
 
+<style>
+    .hidden {display: none;}
+</style>
+
+
 <div class="mp">
+
+    <div class="filter-links">
+        Filter:
+        <ul>
+            <li><a href="#" data-filter="uncontested">Uncontested</a></li>
+            <li><a href="#" data-filter="dfl-primary">DFL Primary</a></li>
+            <li><a href="#" data-filter="gop-primary">R Primary</a></li>
+            <li><a href="#" data-filter="reset">Show All</a></li>
+        </ul>
+    </div>
 
     {% for contest in contests %}
 
@@ -20,3 +35,28 @@
     {% endfor %}
 
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
+<script type="text/javascript">
+    $('.filter-links a').click(function(){
+        filter = $(this).data("filter")
+        console.log(filter)
+
+        $('.election').each(function(){
+            if ($(this).hasClass(filter)) {
+
+            } else {
+                $(this).addClass("hidden")
+            }
+        });
+
+    if (filter == "reset") {
+        $('.election').each(function(){
+            $(this).removeClass("hidden")
+        })
+    }
+
+
+    });
+</script>
