--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 
 <style>
     .hidden {display: none;}
+    .filter-links li a {padding:5px;}
+    .filtering, .filtering a {color: #fff!important; background-color:#0793AB; border-radius: 5px;}
 </style>
 
 
@@ -57,21 +59,37 @@
     };
 
     $('.filter-links a').click(function(){
-        filter = $(this).data("filter")
 
-        $('.election').each(function(){
-            if ($(this).hasClass(filter)) {
+        if ($(this).data("filter") == "reset") {
+          $('.filter-links a').each(function(){
+            $(this).removeClass("filtering")
+          });
 
-            } else {
-                $(this).addClass("hidden")
-            }
+        } else {
+          $(this).toggleClass("filtering")
+        }
+
+        var filters = new Array()
+        $('.filter-links a').each(function(){
+          if ($(this).hasClass("filtering")) {
+            filters.push($(this).data("filter"))
+          }
         });
 
-        if (filter == "reset") {
-            $('.election').each(function(){
-                $(this).removeClass("hidden")
-            })
-        }
+        $('.election').each(function(){
+            var displaying = 1
+
+            for (f in filters) {
+              if (!$(this).hasClass(filters[f])) {
+                displaying = 0
+              }
+            }
+            if (displaying == 0) {
+              $(this).addClass("hidden")
+            } else {
+              $(this).removeClass("hidden")
+            }
+        });
 
         showTotal();
     });
