Updates filing data and adds GreaterMN-metro filter

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,8 @@
             <li><a href="#" data-filter="open-seat">Open Seat</a></li>
             <li><a href="#" data-filter="dfl-primary">DFL Primary</a></li>
             <li><a href="#" data-filter="gop-primary">R Primary</a></li>
+            <li><a href="#" data-filter="metro">Metro</a></li>
+            <li><a href="#" data-filter="greatermn">Greater MN</a></lo>
             <li><a href="#" data-filter="reset">Show All</a></li>
         </ul>
     </div>
