horizontal format for filter links

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,14 @@
     .filtering, .filtering a {color: #fff!important; background-color:#0793AB; border-radius: 5px;}
     .mp .election {padding: 1em; border-bottom: 1px solid #ccc;}
     .mp .map-link {margin: -1em 0 1em;}
+    .mp #total-contests {padding-bottom: 1em; border-bottom: 1px solid #ccc;}
 </style>
 
 
 <div class="mp">
 
-    <div class="filter-links">
-        Filter:
+    <div class="filter-links navigation horizontal">
+        <h4>Show only:</h4>
         <ul>
             <li><a href="#" data-filter="uncontested">Uncontested</a></li>
             <li><a href="#" data-filter="open-seat">Open Seat</a></li>
