Centers displaying text

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     .search-box {width: 100%; margin: 0 auto 1em; text-align: center}
     .mp .form-input-group {width:80%; margin: 0 auto;}
     #text_search {width: 100%;}
+    #total-contests {text-align: center;}
 </style>
 
 
