--- a/templates/index.html
+++ b/templates/index.html
@@ -128,6 +128,7 @@
           $('.filter-links a').each(function(){
             $(this).removeClass("filtering")
           });
+          $('#search-form').trigger("reset");
 
         } else {
           $(this).toggleClass("filtering")
@@ -179,10 +180,12 @@
         var filter = $(this).val()
 
         $(".election").each(function(){
-            if ($(this).text().search(new RegExp(filter, "i")) < 0) {
-                $(this).addClass("hidden");
-            } else {
-                $(this).removeClass("hidden");
+            if(!$(this).hasClass("hidden")) {
+              if ($(this).text().search(new RegExp(filter, "i")) < 0) {
+                  $(this).addClass("hidden");
+              } else {
+                  $(this).removeClass("hidden");
+              }
             }
         })
 
