Hides unpublished text

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="https://s3.amazonaws.com/data.minnpost/projects/minnpost-styles/0.0.6-alpha/minnpost-styles.min.css" type="text/css">
 
 <style>
+    body .node-unpublished {background-repeat: no-repeat;}
     .hidden {display: none;}
     .filter-links li a {padding:5px; font-size: .8em;}
     .filtering, .filtering a {color: #fff!important; background-color:#0793AB; border-radius: 5px;}
