--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
             <li><a href="#" data-filter="uncontested">Uncontested</a></li>
             <li><a href="#" data-filter="open-seat">Open Seat</a></li>
             <li><a href="#" data-filter="dfl-primary">DFL Primary</a></li>
-            <li><a href="#" data-filter="gop-primary">R Primary</a></li>
+            <li><a href="#" data-filter="gop-primary">GOP Primary</a></li>
             <li><a href="#" data-filter="metro">Metro</a></li>
             <li><a href="#" data-filter="greatermn">Greater MN</a></lo>
             <li><a href="#" data-filter="reset">Show All</a></li>
