--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,7 @@
 
         $('#total-contests').html("Displaying <strong>" + candidates + "</strong> candidates "+
                                   "in <strong>" + displaying + "</strong> " +
-                                   "races (out of <strong>" + total + "</strong> total races.)");
+                                   "races (out of <strong>" + total + "</strong> total races).");
     };
 
     $('.filter-links a').click(function(e){
